--- a/Ejemplo 3.1.html
+++ b/Ejemplo 3.1.html
@@ -11,6 +11,14 @@
     <li>Repositorios De Github</li>
     <li>Push & Pull</li>
     <li>Clonacion de repositorios</li>
+
+<h3 aling= "center">¿ Que es el control de repositorios locales?</h3>
+<p aling= "center">
+     Este capítulo se va a hablar de cómo comenzar a utilizar Git.
+     Empezaremos describiendo algunos conceptos básicos sobre las herramientas de control de versiones;
+     después, trataremos de explicar cómo hacer que Git funcione en tu sistema; finalmente, exploraremos cómo configurarlo para empezar a trabajar con él.
+     Al final de este capítulo deberás entender las razones por las cuales Git existe y conviene que lo uses, y deberás tener todo preparado para comenzar ...
+   
 </p>
 </body>
 </html>
