--- a/Ejemplo 3.1.html
+++ b/Ejemplo 3.1.html
@@ -19,6 +19,10 @@
      después, trataremos de explicar cómo hacer que Git funcione en tu sistema; finalmente, exploraremos cómo configurarlo para empezar a trabajar con él.
      Al final de este capítulo deberás entender las razones por las cuales Git existe y conviene que lo uses, y deberás tener todo preparado para comenzar ...
    
+     <h3 aling= "center">¿ Que es un repositorio de github?</h3>
+<p aling= "center">
+    Github es un repositorio online gratuito que permite gestionar proyectos y controlar versiones de código. ... Se podría hablar de Github como la red social pensada para desarrolladores, siendo este repositorio uno de los más usados a nivel mundial
+   
 </p>
 </body>
 </html>
